sertifikasi native ios

--- a/index.html
+++ b/index.html
@@ -463,6 +463,22 @@ Created by pixpalette.com - online design magazine -->
                                                     iOS menggunakan bahasa kotlin, swift, dan flutter</p>
                                                 <p>Selengkapnya dapat mengakses lampiran sertifikat berikut:</p>
                                                 <ul>
+                                                    <li><a href="https://www.dicoding.com/certificates/JLX13VGK2P72"
+                                                            target="_blank">Aplikasi iOS Expert
+                                                        </a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/KEXL37OQ0PG2"
+                                                            target="_blank">Aplikasi iOS Fundamental
+                                                        </a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/98XW6NN79XM3"
+                                                            target="_blank">Aplikasi iOS Pemula
+                                                        </a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/ERZR5O7RWPYV"
+                                                            target="_blank">Aplikasi iOS Swift
+                                                        </a>
+                                                    </li>
                                                     <li><a href="https://www.dicoding.com/certificates/MEPJK95ELX3V"
                                                             target="_blank">Aplikasi Android Jetpack Compose
                                                         </a>
@@ -479,11 +495,11 @@ Created by pixpalette.com - online design magazine -->
                                                     <li><a href="https://www.dicoding.com/certificates/JMZVMO08OZN9"
                                                             target="_blank">Aplikasi Android Fundamental</a>
                                                     </li>
-                                                    <li><a href="https://www.dicoding.com/certificates/2VX3N9VQVXYQ"
-                                                            target="_blank">Aplikasi Android Kotlin</a>
-                                                    </li>
                                                     <li><a href="https://www.dicoding.com/certificates/07Z6LYQO2PQR"
                                                             target="_blank">Aplikasi Android Pemula</a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/2VX3N9VQVXYQ"
+                                                            target="_blank">Aplikasi Android Kotlin</a>
                                                     </li>
                                                     <li><a href="https://www.dicoding.com/certificates/53XEERM2RXRN"
                                                             target="_blank">Aplikasi Android HTML5</a>
