--- a/index.html
+++ b/index.html
@@ -460,9 +460,25 @@ Created by pixpalette.com - online design magazine -->
 
                                             <div class="timeline-content">
                                                 <p>Fokus mendalami ilmu pemrograman mobile untuk ekosistem Android dan
-                                                    iOS menggunakan bahasa kotlin, swift, dan flutter</p>
-                                                <p>Selengkapnya dapat mengakses lampiran sertifikat berikut:</p>
+                                                    iOS menggunakan bahasa kotlin, swift, dan flutter.</p>
+                                                <p>Selengkapnya dapat mengakses sertifikat berikut:</p>
                                                 <ul>
+                                                    <li><a href="https://www.dicoding.com/certificates/KEXL3NDQMPG2"
+                                                            target="_blank">Aplikasi Flutter Expert
+                                                        </a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/98XWK819JXM3"
+                                                            target="_blank">Aplikasi Flutter Fundamental
+                                                        </a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/07Z657JWRXQR"
+                                                            target="_blank">Aplikasi Flutter Pemula
+                                                        </a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/ERZR4L0KOZYV"
+                                                            target="_blank">Aplikasi Flutter Dart
+                                                        </a>
+                                                    </li>
                                                     <li><a href="https://www.dicoding.com/certificates/JLX13VGK2P72"
                                                             target="_blank">Aplikasi iOS Expert
                                                         </a>
