add meta description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Created by pixpalette.com - online design magazine -->
     <link rel="icon" type="image/x-icon" href="images/icons/favicon.png">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Wawan Chahyo Nugroho</title>
+    <meta name="description" content="Seorang Mobile Developer yang berorientasi pada desain UI/UX yang proporsional. Pemahaman mendalam tentang Android Lifecycle, State Management, Dependency Injection, Reactive Programming, Declarative UI dan Error Handling.">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -717,27 +718,26 @@ Created by pixpalette.com - online design magazine -->
                             ABOUT ME
                             -->
                             <div role="tabpanel" class="tab-pane fade" id="termCondition">
-                                <h4>Pengembang aplikasi Android berorientasi pada pengalaman pengguna yang baik.
-                                    Mengkonseptualisasikan solusi aplikasi dengan teknologi terkini dan desain UI/UX
-                                    yang proporsional. Mengevaluasi dan mengoptimalkan UI/UX untuk mencapai pengalaman
-                                    pengguna yang lebih baik. Pemahaman mendalam tentang Android Lifecycle, State
-                                    Management, Dependency Injection, Reactive Programming, Declarative UI & Error
-                                    Handling.</h4>
+                                <h4>Seorang Mobile Developer yang berorientasi pada desain UI/UX yang lebih baik &
+                                    proporsional dengan cara mengevaluasi dan mengoptimalkannya.
+                                    Mengkonseptualisasikan solusi dengan teknologi aplikasi terkini. Pemahaman mendalam
+                                    tentang Android Lifecycle, State Management, Dependency Injection, Reactive
+                                    Programming, Declarative UI dan Error Handling.</h4>
                                 <br>
-                                <h4>Berangkat dari keterbatasan dan mengupayakan kemajuan</h4>
+                                <h4>Berangkat dari keterbatasan dan mengupayakan progress</h4>
                                 <br>
-                                <h4>Karir saya dimulai dari teknisi elektronik selama lebih dari 6 tahun, hal ini
+                                <h4>Karir saya dimulai dari teknisi elektronika selama lebih dari 6 tahun, hal ini
                                     membuat kemampuan saya kental dengan logika dan pemecahan masalah. Pada tahun ke-3
-                                    pengalaman itu, saya memiliki lingkaran orang-orang kreatif yang menunjukkan kepada
+                                    pengalaman itu, saya berada di lingkaran orang-orang kreatif yang menunjukkan kepada
                                     saya cara menghasilkan uang secara online, itulah sebabnya saya memulai Blogging dan
                                     SEO hingga meninggalkan bidang elektronika. Terbiasa berinteraksi dengan hardware
-                                    dan logika pemecahan masalah elektronika sepertinya memberikan dampak positif
-                                    terhadap saya dalam memahami karakter robot perayap mesin pencari, termasuk
+                                    dan reparasi elektronika sepertinya memberikan dampak positif terhadap saya dalam
+                                    memahami karakter robot perayap mesin pencari, termasuk
                                     Pemrograman & Debugging</h4>
                                 <br>
                                 <h4>Di tahun ke-4 pengalaman itu, saya kembali terjun ke dunia pendidikan dengan belajar
                                     sambil bekerja di perusahaan geodesi. Suatu ketika saya mengalami kegalauan karena
-                                    sudah tidak bisa lagi menyeimbangkan tanggung jawab saya sebagai mahasiswa IT dan
+                                    sudah tidak bisa lagi menyeimbangkan tanggung jawab sebagai mahasiswa IT dan
                                     teknisi profesional, akhirnya saya mengambil keputusan berat untuk meninggalkan
                                     dunia elektronika dan totalitas menekuni dunia IT, termasuk Programming, Blogging &
                                     SEO.</h4>
