--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ Created by pixpalette.com - online design magazine -->
                                                             target="_blank">Juara 1 Pekan Kreatif Mahasiswa</a></li>
                                                 </ul>
                                                 <br>
-                                                <p>Ijazah</p>
+                                                <a href="documents/sarjana-ijazah.pdf" target="_blank">Ijazah</a>
                                                 <div class="timeline-embed">
                                                     <iframe src="documents/sarjana-ijazah.pdf" width="100%" height="320"
                                                         frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -631,7 +631,7 @@ Created by pixpalette.com - online design magazine -->
                                                             target="_blank">Sertifikat Magang Reparasi</a></li>
                                                 </ul>
                                                 <br>
-                                                <p>Ijazah</p>
+                                                <a href="documents/smk-ijazah.pdf" target="_blank">Ijazah</a>
                                                 <div class="timeline-embed">
                                                     <iframe src="documents/smk-ijazah.pdf" width="100%" height="320"
                                                         frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -658,7 +658,7 @@ Created by pixpalette.com - online design magazine -->
                                                 <p> Hanya lulusan sekolah menengah pertama. Setiap hari adalah hari
                                                     belajar.
                                                 </p>
-                                                <p>Ijazah</p>
+                                                <a href="documents/smp-ijazah.pdf" target="_blank">Ijazah</a>
                                                 <div class="timeline-embed">
                                                     <iframe src="documents/smp-ijazah.pdf" width="100%" height="320"
                                                         frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -698,7 +698,7 @@ Created by pixpalette.com - online design magazine -->
                                                     <p>Grade: Negeri</p>
                                                     <p> Hanya lulusan sekolah dasar. Setiap hari adalah hari bermain.
                                                     </p>
-                                                    <p>Ijazah</p>
+                                                    <a href="documents/sd-ijazah.pdf" target="_blank">Ijazah</a>
                                                     <div class="timeline-embed">
                                                         <iframe src="documents/sd-ijazah.pdf" width="100%" height="320"
                                                             frameborder="0" style="border:0" allowfullscreen></iframe>
