--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ Created by pixpalette.com - online design magazine -->
     <link rel="icon" type="image/x-icon" href="images/icons/favicon.png">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Wawan Chahyo Nugroho</title>
-    <meta name="description" content="Seorang Mobile Developer yang berorientasi pada desain UI/UX yang proporsional. Pemahaman mendalam tentang Android Lifecycle, State Management, Dependency Injection, Reactive Programming, Declarative UI dan Error Handling.">
+    <meta name="description"
+        content="Seorang Mobile Developer yang berorientasi pada desain UI/UX yang proporsional. Pemahaman mendalam tentang Android Lifecycle, State Management, Dependency Injection, Reactive Programming, Declarative UI dan Error Handling.">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -73,6 +74,13 @@ Created by pixpalette.com - online design magazine -->
                             PORTFOLIO
                             -->
                             <div role="tabpanel" class="tab-pane fade in active" id="buyTicket">
+                                <a href="#" target="_blank"><span class="label label-success">Production</span></a>
+                                <a href="#" target="_blank"><span class="label label-default">Prototype</span></a>
+                                <a href="#" target="_blank"><span class="label label-warning">experiment</span></a>
+                                <!-- <span class="label label-primary">Primary Label</span> 
+                                <span class="label label-info">Info Label</span> 
+                                <span class="label label-danger">Danger Label</span> -->
+                                <br><br>
                                 <div class="row" id="mycontent">
 
                                 </div>
@@ -860,6 +868,18 @@ Mengkoordinasikan pengembangan aplikasi Gracia Visi Pratama untuk mengatasi perm
                 price_display: "Prototype",
                 description: `
 Berkontribusi dalam membuat konsep dan merealisasikannya dalam prototipe aplikasi seluler, awalnya dibuat dengan Kotlin kemudian migrasi ke Flutter. Aplikasi ini dirancang untuk mengelola kemelut antrian di layanan kesehatan Indonesia.
+`
+            },
+            {
+                img: "images/hadir.jpg",
+                hyperlink: "https://www.linkedin.com/posts/wawanchahyonugroho_i-just-finished-a-flutter-technical-test-activity-7222694296225771520-aJus?utm_source=share&utm_medium=member_desktop",
+                alert: "Akses ke repository tidak tersedia!",
+                title: "Hadir",
+                sub_title: "Flutter",
+                price_value: 180000,
+                price_display: "Prototype",
+                description: `
+Sebuah submission teknikal tes lamaran kerja di HashMicro sebagai mobile developer yang kebetulan memiliki kesamaan konsep dengan proyek Asahy yang ditulis menggunakan kotlin.
 `
             },
             {
